# RideFare-ETL-Pipeline

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  RideFare_Analysis_Engineering.ipynb  etl_db.py  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pipeline-refresh.yml  release-please.yml  vercel-preview.yml  vercel-production.yml  web-quality.yml
apps/web/: next.config.ts  package.json
apps/web/app/: apple-icon.tsx  globals.css  layout.tsx  opengraph-image.tsx  (+2 more)
dbt/: dbt_project.yml  profiles.yml.example
dbt/tests/: join_grain_is_stable.sql
docs/adr/: 0001-monorepo-structure.md  0002-foundation-stack.md  0003-static-artifacts-actions-vercel.md
docs/architecture/: legacy-audit.md  system-overview.md
docs/data/: dimensional-model.md  quality-rules.md  source-data-contract.md
docs/ml/: evaluation-protocol.md  model-card.md  modeling-strategy.md
docs/runbooks/: deployment.md  local-development.md  release-process.md
docs/ui/: design-system.md
scripts/: bootstrap.ps1  build_frontend.ps1  refresh-public-artifacts.ps1  run_pipeline.ps1  train_model.ps1  validate-python.ps1  validate-web.ps1
src/ridefare/: __init__.py  __main__.py  cli.py  config.py  contracts.py  exceptions.py  export_web.py  ingestion.py  ml_contracts.py  ml_dataset.py  ml_training.py  normalization.py  serialization.py  transform.py
tests/integration/: test_pipeline_flow.py
tests/unit/: test_cli.py  test_data_platform.py  test_export_web.py  test_ml_system.py  test_project_docs.py  test_smoke.py
(+70 files in other folders)
