[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ridefare"
version = "0.1.0"
description = "RideFare data platform package for analytics engineering and ML workflow orchestration."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Samir Caizapasto" }]
dependencies = []

[project.optional-dependencies]
data = [
  "dbt-duckdb>=1.9,<2.0",
  "duckdb>=1.2,<2.0",
  "pandera[polars]>=0.24,<0.25",
  "polars>=1.24,<2.0",
]
ml = [
  "numpy>=2.2,<3.0",
  "scikit-learn>=1.6,<2.0",
  "shap>=0.47,<0.48",
  "xgboost>=2.1,<3.0",
]
dev = [
  "pytest>=8.4,<9.0",
  "ruff>=0.11,<0.12",
]

[project.scripts]
ridefare = "ridefare.cli:console_main"
ridefare-ingest = "ridefare.cli:ingest_entrypoint"
ridefare-transform = "ridefare.cli:transform_entrypoint"
ridefare-train = "ridefare.cli:train_entrypoint"
ridefare-export-web = "ridefare.cli:export_web_entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/ridefare"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:Pandas and numpy have been removed from the base pandera:UserWarning",
  "ignore:the ordering parameter on Categorical is deprecated:DeprecationWarning",
]

[tool.ruff]
extend-exclude = ["notebooks/ridefare_analysis_engineering_legacy.ipynb", "scripts/legacy"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
